--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -4,14 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>social-network-app</artifactId>
-        <groupId>com.getjavajob.training.web1803.ershova.social-network-app</groupId>
+        <groupId>com.getjavajob.training.web1803.ershova</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
-    <artifactId>webapp</artifactId>
-    <groupId>com.getjavajob.training.web1803.ershova.webapp</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>social-network-webapp</artifactId>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -19,17 +17,17 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.getjavajob.training.web1803.ershova.common</groupId>
+            <groupId>com.getjavajob.training.web1803.ershova</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.getjavajob.training.web1803.ershova.dao</groupId>
+            <groupId>com.getjavajob.training.web1803.ershova</groupId>
             <artifactId>dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.getjavajob.training.web1803.ershova.service</groupId>
+            <groupId>com.getjavajob.training.web1803.ershova</groupId>
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -42,11 +40,6 @@
             <artifactId>spring-webmvc</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.tomcat.embed</groupId>
-            <artifactId>tomcat-embed-jasper</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-jasper-el</artifactId>
             <version>8.0.1</version>
@@ -54,13 +47,6 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
-            <!--<version>1.2</version>-->
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <!--<version>4.12</version>-->
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -81,7 +67,6 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
@@ -128,7 +113,17 @@
             <version>3.1.0</version>
         </dependency>
     </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.getjavajob.training.web1803.webapp.WebappApplication</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <!--<build>-->
         <!--<finalName>webapp</finalName>-->
         <!--<pluginManagement>&lt;!&ndash; lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) &ndash;&gt;-->
@@ -165,8 +160,6 @@
                 <!--</plugins>-->
         <!--</pluginManagement>-->
     <!--</build>-->
-
-
     <!--<build>-->
         <!--<plugins>-->
             <!--<plugin>-->
@@ -197,7 +190,6 @@
                         <!--</configuration>-->
                     <!--</execution>-->
                 <!--</executions>-->
-
             <!--</plugin>-->
             <!--<plugin>-->
                 <!--<groupId>com.heroku.sdk</groupId>-->
